fix gap

--- a/css/style.scss
+++ b/css/style.scss
@@ -3,7 +3,6 @@ $tablet-width: 1000px;
 $phone-width: 700px;
 
 .page {
-  width: 80%;
   height: 600px;
   display: flex;
   flex-direction: column;
@@ -81,11 +80,11 @@ $phone-width: 700px;
     .title {
       justify-content: space-between;
       .left-menu {
-        width: 20%;
+        /*width: 20%;*/
         display: inline;
       }
       .right-menu {
-        width: 20%;
+        /*width: 20%;*/
         display: inline;
       }
     }
